k8s/qr-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-backend
  namespace: qr
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: qr-backend
  template:
    metadata:
      labels:
        app: qr-backend
    spec:
      containers:
        - name: qr-backend
          image: ghcr.io/blainmac333/qr-backend:b4f6f2fb759572b490686c286e43bfb5b47e9555
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "192Mi"
            limits:
              cpu: "600m"
              memory: "384Mi"
          volumeMounts:
            - name: qrs
              mountPath: /data/qrs
      volumes:
        - name: qrs
          persistentVolumeClaim:
            claimName: qrs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: qr-backend
  namespace: qr
spec:
  selector:
    app: qr-backend
  ports:
    - port: 8000
      targetPort: 8000
