k8s/qr-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-frontend
  namespace: qr
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: qr-frontend
  template:
    metadata:
      labels:
        app: qr-frontend
    spec:
      containers:
        - name: qr-frontend
          image: ghcr.io/blainmac333/qr-frontend:b4f6f2fb759572b490686c286e43bfb5b47e9555
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "75m"
              memory: "160Mi"
            limits:
              cpu: "400m"
              memory: "320Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qr-frontend
  namespace: qr
spec:
  selector:
    app: qr-frontend
  ports:
    - port: 3000
      targetPort: 3000
